--- a/N1單字.md
+++ b/N1單字.md
@@ -1,5 +1,6 @@
 |單字|讀音|中文|
 |---|---|---|
+|愛犬|あいけん|愛犬|
 |愛好者|あいこうしゃ|狂熱者、粉絲、奉獻者、熱愛某事的人|
 |相次ぐ|あいつぐ|相繼發生、接連不斷|
 |相棒|あいぼう|夥伴、搭檔|
@@ -12,11 +13,14 @@
 |浅い|あさい|淺、淡、膚淺|
 |朝夕|あさゆう|從早到晚、從早到晚、不斷地|
 |値する|あたいする|值得|
+|温かい|あたたかい|溫暖、暖和、熱情、親切|
 |扱い|あつかい|使用、操作、操縱|
 |扱う|あつかう|處理、對待、經銷、操作|
 |アトリエ||攝影棚、攝影室|
 |暴く|あばく|揭發、揭露、敗露|
 |アポを取る|あぽをとる|約定、敲定時間|
+|過ち|あやまち|過失、過錯、錯誤|
+|誤り|あやまり|搞錯、弄錯、耽誤|
 |改めて|あらたて|重新、再|
 |現れ|あらわれ|露出、顯出|
 |アリ||螞蟻|
@@ -27,6 +31,7 @@
 |異界|いかい|異世界|
 |いかなる||任何一種|
 |息詰まる|いきづまる|令人窒息、令人窒息|
+|憤り|いきどおり|憤慨、憤怒、氣憤、慨嘆|
 |息抜き|いきぬき|稍作休息、喘口氣|
 |育児|いくじ|育兒|
 |育成|いくせい|幼兒、兒童|
@@ -34,28 +39,35 @@
 |移住|いじゅう|移居|
 |いたずら||淘氣、惡作劇|
 |営む|いたなむ|經營、辦、做|
+|抱く|いだく|抱有、懷有、懷抱|
 |一丸|いちがん|一個整體、一團、集中在一起|
 |一群|いちぐん|一群、一窩|
 |一助|いちじょ|一點幫助、一臂之力|
 |一存|いちぞん|自己個人的意見|
+|一同|いちどう|全體、大家|
 |一人前|いちにんまえ|獨立、獨當一面、一人份|
 |一気に|いっきに|一口氣地、不停地|
 |一見|いっけん|乍看、一瞥|
 |一顧|いっこ|一看、一眼|
 |一刻|いっこく|一刻、片刻間、短時間|
+|一刻も早い|いっこくもはやい|立即、盡快|
 |一刻も早く|いっこくもはやく|立即、盡快|
 |一昨年|いっさくねん|前年|
 |いっそのこと||而是、更快、最好|
 |一時|いっとき|一時、某時|
+|否|いな|否|
 |居眠り|いねむり|瞌睡、打盹|
 |威張る|いばる|擺架子、自吹自擂|
 |未だに|いまだに|仍然、即使現在、直到今天|
 |今一つ|いまひとつ|不完美、有缺陷|
 |異様な|いような|奇怪、怪異|
+|医療設備|いりょうせつび|醫療設備|
+|医療ミス|いりょうミス|醫療失誤|
 |異例|いれい|破格、破例|
 |引用する|いんようする|引用|
 |ウォーターカッター||水刀、水刀切割機|
 |浮世絵|うきよえ|浮世繪|
+|受け止める|うけとめる|理解、認識|
 |失い|うしない|失掉、丟失、錯過、喪失、死亡|
 |薄紙|うすがみ|薄紙|
 |薄暗い|うすぐらい|暗淡、昏暗|
@@ -65,6 +77,7 @@
 |器|うつわ|容器、器皿|
 |奪う|うばう|奪、搶奪、剝奪|
 |埋める|うめる|埋|
+|裏切る|うらぎる|背叛、違背、辜負|
 |裏目に出る|うらめにでる|適得其反、事與願違|
 |売り上げ|うりあげ|銷售額|
 |運送業者|うんそうぎょうしゃ|運輸業者、物流業者|
@@ -75,12 +88,17 @@
 |遠方|えんぽう|遠方、遠處|
 |オアシス||綠洲|
 |甥|おい|外甥、外甥女、侄子、侄女|
+|生い立ち|おいたち|成長經歷、個人經歷|
 |老いる|おいる|老、年老、上年紀|
 |負う|おう|擔負、承擔|
+|往々にして|おうおうにして|往往、時常|
 |応募|おうぼ|應招、應徵|
+|応募作|おうぼさく|投稿作品|
+|横領する|おうりょうする|侵吞、貪汙私吞、霸占|
 |大幅に|おおはばに|大幅地|
 |大家|おおや|房東|
 |公|おおやけ|公開、公共、公眾|
+|公の場|おおやけのば|公共場合|
 |大らか|おおらか|落落大方、豁達、胸襟開闊|
 |お悔み|おくやみ|慰問、哀悼|
 |おごり||請客、招待|
@@ -90,6 +108,7 @@
 |抑える|おさえる|控制、抑制、阻止、防止|
 |幼い|おさない|幼小、年幼|
 |押し入れ|おしいれ|壁櫥、壁櫃|
+|押し寄せる|おしよせる|蜂擁而至|
 |お節介|おせっかい|愛管閒事、多嘴多舌|
 |襲う|おそう|突然前去、襲擊|
 |お遣い|おつかい|差使|
@@ -98,14 +117,18 @@
 |脅かす|おびやかす|威脅。嚇唬|
 |想い|おもい|愛慕、思考、想法|
 |思いやり|おもいやり|關懷、體諒、顧念、思念|
+|思いやる|おもいやる|體貼、體諒、思念、顧念|
+|思惑|おもわく|想法、打算、看法、評論|
 |親不孝|おやふこう|不孝、不孝順|
 |親元|おやもと|父母的家、父母的身邊|
+|及ぶ|およぶ|達到、波及、及於、比上、趕上|
 |お嫁さん|およめさん|媳婦、妻子|
 |折れる|おれる|折斷|
 |下した|おろした|降、落|
 |お詫び|おわび|致歉、賠罪|
 |オンデマンド||根據需求提供的相應服務|
 |海外移転|かいがいいてん|移居海外|
+|快挙|かいきょ|壯舉、令人痛快的行為|
 |解雇|かいこ|解雇、開除|
 |解雇する|かいこする|解雇、開除|
 |介護靴|かいごぐつ|護士鞋|
@@ -122,6 +145,7 @@
 |陰の|かげの|背地裡、暗中|
 |過信|かしん|過於相信|
 |果樹園|かじゅえん|果樹園|
+|数多い|かずおおい|許多、多種|
 |肩がこる|かたがこる|肩膀酸痛|
 |片隅|かたすみ|角落、一隅|
 |片っ端から|かたっぱしから|依次、一個一個地|
@@ -129,7 +153,7 @@
 |刀|かたな|刀、武士刀|
 |刀|かたな|刀|
 |語り明かす|かたりあかす|談到天亮、聊到黎明|
-|かつ||並且，而且|
+|かつ||並且、而且|
 |カヌー||獨木舟|
 |鐘|かね|鈴、鐘、鐘聲|
 |かび臭い|かびくさい|黴味、陳腐、陳舊|
@@ -137,10 +161,13 @@
 |釜|かま|鍋|
 |かゆみ||癢、瘙癢|
 |空っぽ|からっぽ|空的、空洞的|
+|絡まり合う|からまりあう|交織再一起|
 |軽んじる|かろんじる|輕視、蔑視|
+|カワウソ||水獺|
 |川面|かわも|河面|
 |関係を築く|かんけいをきずく|建立關係|
 |感激|かんげき|感激、感動|
+|患者|かんじゃ|患者、病人|
 |患者|かんじゃ|患者、病人|
 |寛容な|かんような|寬容的、寬大的|
 |管理職|かんりしょく|管理人員|
@@ -148,9 +175,11 @@
 |外車|がいしゃ|外國產的汽車、進口車|
 |額|がく|前額、數量、框|
 |ガタガタ||搖搖晃晃的|
+|学会|がっかい|學會|
 |柄|がら|花紋、圖案、花樣|
 |ガラッと||門一下子打開的聲音|
 |眼下|がんか|眼前俯瞰的一切|
+|眼科|がんか|眼科|
 |頑固な|がんこな|頑固的、固執的|
 |願書|がんしょ|志願書、申請書|
 |帰還する|きかんする|歸還、返還|
@@ -160,19 +189,26 @@
 |機種|きしゅ|機型、機種|
 |汚い|きたない|骯髒、不乾淨、卑鄙、吝嗇|
 |気立て|きだて|性情、性格|
+|切手|きって|郵票、票據|
 |起動|きどう|啟動、開動|
 |気の毒|きのどく|感到可憐、悲慘|
 |奇抜な|きばつな|奇異、與衆不同|
 |気晴らしい|きばらしい|消愁解悶、散心、消遣|
+|寄付|きふ|捐款|
 |寄付金|きふきん|捐款|
 |規模|きぼ|規模|
+|究極|きゅうきょく|最終、窮極|
 |急降下する|きゅうこうかする|急速下降|
 |休職|きゅうしょく|停職|
+|救命救急|きゅうめいきゅうきゅう|急救|
+|救命ボート|きゅうめいぼーと|救生艇|
 |給料日|きゅうりょうび|發薪日|
 |教育費|きょういくひ|教育或學校費用|
 |協議|きょうぎ|協議、磋商|
 |協議|きょうぎ|協議、磋商|
+|境遇|きょうぐう|境遇|
 |強行採決|きょうこうさいけつ|強行表決|
+|恐縮|きょうしゅく|不好意思、過意不去|
 |恐縮|きょうしゅく|不好意思、過意不去|
 |競争|きょうそう|競爭、競賽|
 |教卓|きょうたく|講桌|
@@ -180,11 +216,14 @@
 |気楽な|きらくな|無憂無慮、舒適、舒暢、輕鬆|
 |ギラリとした光|きらりとしたひかり|光芒一閃|
 |きれいさっぱり捨てる|きれいさっぱりすてる|拋棄得乾乾淨淨|
+|金庫|きんこ|金庫、保險柜、國庫|
 |緊迫する|きんぱくする|緊張、緊迫、緊急|
 |議案|ぎあん|會議提出的討論案、議案|
 |疑問|ぎもん|質問、疑問|
 |凝視|ぎょうし|凝視、注視|
 |行政|ぎょうせい|行政|
+|業績|ぎょうせき|業績、成績|
+|業務提携|ぎょうむていけい|業務合作|
 |行列|ぎょうれつ|行列、隊列、矩陣|
 |ぎらぎら光る|ぎらぎらひかる|閃閃地（發光）|
 |くぐりぬける|くぐりぬける|逃過、通過|
@@ -201,20 +240,30 @@
 |グルメ||美食家、美食家、美食家|
 |経緯|けいい|經緯、原委、事情的經過|
 |形式的な|けいしきてきな|表面的、形式上的|
+|軽傷者|けいしょうしゃ|輕傷者|
 |刑罰|けいばつ|刑罰|
 |警備|けいび|警衛、警備、警戒|
 |警部|けいぶ|警部（日本警察職級之一）|
+|毛皮|けがわ|毛皮、皮草|
 |消印|けしいん|郵戳|
 |けち||小氣、吝嗇|
 |欠陥|けっかん|缺陷、欠缺|
+|欠陥品|けっかんひん|殘缺品、瑕疵品|
 |傑作|けっさく|傑作|
+|決断|けつだん|決斷、果斷|
+|決断|けつだん|決斷|
 |権威|けんい|權威、威信|
 |健闘|けんとう|奮鬥、頑強鬥爭|
 |見物客|けんぶつきゃく|觀光者、觀眾、觀眾|
+|権力の座|けんりょくのざ|權力寶座、掌權|
+|芸術|げいじゅつ|藝術|
 |外科|げか|外科|
 |激流|げきりゅう|激流|
 |激励|げきれい|激勵、鼓勵|
+|限界|げんかい|界線、局限、極限|
 |原稿|げんこう|原稿|
+|厳重に|げんじゅう|嚴重地、嚴格地、謹慎地|
+|厳選する|げんせんする|嚴選、嚴格篩選|
 |言動|げんどう|言行|
 |現場|げんば|現場|
 |原油|げんゆ|原油|
@@ -224,21 +273,25 @@
 |工芸品|こうげいひん|工藝品|
 |公言|こうげん|聲言、公開說|
 |広告|こうこく|廣告|
+|公衆便所|こうしゅうべんじょ|公共廁所|
 |構造|こうぞう|構造、結構|
 |公表|こうひょう|公布、發表|
 |広報活動|こうほうかつどう|宣傳活動|
+|高名な|こうめいな|有名的、德高望重的|
 |項目|こうもく|項目|
 |公約|こうやく|諾言、許諾|
 |小鬼|こおに|小鬼|
 |凍る|こおる|結凍、凍、結冰|
 |酷|こく|非常、嚴重、殘酷|
 |国宝級|こくほうきゅう|國寶級|
+|心地いい|ここちいい|愉快、舒暢、愜意|
 |志|こころざし|志向、志願、意圖|
 |心細い|こころぼそい|孤單不安、心裡沒底|
 |腰|こし|腰|
 |こじれる||複雜化、惡化|
 |事ここに至る|ことここにいたる|事已至此、事態到了如此地步、事態惡化到沒有辦法解決的地步|
 |事なかれ主義|ことなかれしゅぎ|消極主義、不求有功但求無過|
+|異なる|ことなく|不同、不一樣|
 |粉|こな|粉、粉末|
 |コマーシャル||商業的、商業廣告|
 |小麦粉|こむぎこ|麵粉、小麥粉|
@@ -248,10 +301,12 @@
 |紺色|こんいろ|深藍色、海軍藍|
 |混雑|こんざつ|混雜、混亂|
 |強盗|ごうとう|搶劫、盜竊|
+|誤解を招く|ごかいをまねく|招致誤解|
 |誤字|ごじ|錯字|
 |ごった返す|ごったがえす|混亂或騷動、混亂、擁擠或擠滿人|
 |ご無沙汰|ごぶさた|好久不見、久違|
 |五分咲き|ごぶざき|花開半滿、含苞待放|
+|ゴールイン||進球、跑到終點、終成眷屬|
 |菜園|さいえん|菜園|
 |再開する|さいかいする|再開始、重新進行、恢復|
 |再三|さいさん|再三、屢次|
@@ -267,6 +322,7 @@
 |避ける|さける|躲避、避開|
 |ささやき||竊竊私語|
 |さぞかし||肯定的|
+|察する|さっする|推測、揣測、想像|
 |殺虫剤|さっちゅうざい|殺蟲劑|
 |殺到する|さっとうする|蜂擁而至、紛紛到來、湧向|
 |さっぱり||乾淨、利落|
@@ -296,19 +352,24 @@
 |静まり返る|しずまりかえる|鴉雀無聲、萬籟俱寂|
 |姿勢|しせい|姿勢、姿態、態度|
 |姿勢|しせい|姿勢、姿態、態度|
+|死体|したい|屍體、死屍|
 |下請け|したうけ|承包、轉包|
 |従う|したがう|跟從、聽從、遵循、遵守|
+|下回る|したまわる|低於、在～以下|
 |視聴率|しちょうりつ|收視率|
 |執筆|しっぴつ|執筆|
 |湿度|しつど|濕度|
 |指摘する|してきする|指正、指謫|
 |視点|してん|觀點、視角|
 |品薄|しなうす|缺貨、庫存不足|
+|縛る|しばる|束縛、捆綁|
+|死亡|しぼう|死亡|
 |志望校|しぼうこう|志願學校|
 |しめくくり||結論、結束、完成、總結|
 |社会面|しゃかいめん|社會版|
 |車庫|しゃこ|車庫|
 |社交的な|しゃこうてきな|喜歡交際的、善於交際的|
+|謝罪しゃざいする|しゃざいする|道歉、謝罪|
 |借金|しゃっきん|債、借款|
 |周囲|しゅうい|周圍、四周|
 |集客|しゅうきゃく|吸引客人、攬客|
@@ -320,7 +381,9 @@
 |首相|しゅしょう|首相、內閣總理大臣|
 |出荷する|しゅっかする|出貨、發貨|
 |出産|しゅっさんする|生育、出生、生（孩子）|
+|主役|しゅやく|主角、主要人物|
 |瞬時に|しゅんじに|瞬時間|
+|私有地|しゆうち|私有地|
 |消火器|しょうかき|滅火器|
 |生涯|しょうがい|生涯|
 |消極的な|しょうきょくてきな|消極的、保守的|
@@ -331,26 +394,36 @@
 |小心者|しょうしんもの|膽小鬼、小心謹慎的人|
 |～商事|しょうじ|貿易公司的名稱|
 |正体|しょうたい|原形、真面目、本尊|
+|承認|しょうにん|承認、同意|
 |消費|しょうひ|消費|
+|証明する|しょうめいする|證明|
+|書家|しょか|書法家|
 |初級|しょきゅう|初級|
 |職務範囲|しょくむはんい|職務範圍|
 |所持|しょじ|所持、所有、攜帶|
+|初対面|しょたいめん|初次見面|
+|処置|しょち|處置、處理|
 |庶民感覚|しょみんかんかく|民眾感受、普遍感受|
 |ショートケーキ||脆餅|
 |調べ|しらべ|調子、曲調|
 |記す|しるす|記錄|
+|熾烈|しれつ|猛烈的、嚴重的|
 |知れ渡る|しれわたる|出名|
 |素人|しろうと|外行、門外漢、業餘愛好者、良家婦女、新人|
 |しわ||皺紋、褶皺|
 |進言|しんげん|建言、建議|
 |振興|しんこう|振興|
 |真実味|しんじつみ|真情實感、栩栩如生、感覺是真的|
+|慎重に|しんちょうに|慎重地|
+|森林|しんりん|森林|
 |シーンとする||一片寂靜的樣子|
 |辞意|じい|辭職之意|
 |自覚|じかく|自覺、自知、醒悟|
 |次期|じき|下期～、下屆～|
 |時給|じきゅう|時薪、計時工資|
 |事業所|じぎょうしょ|公司行號、小型企業|
+|自首する|じしゅする|自首|
+|実行力|じっこうりょく|執行力、實行力|
 |実績|じっせき|業績、成績、實戰成果|
 |実績|じっせき|業績、成績、實戰成果|
 |じっと||固定地、專心地、耐心地、堅忍地、不動|
@@ -358,7 +431,11 @@
 |自負する|じふする|自負、自滿|
 |自慢話|じまんばなし|得意的話、吹牛、炫耀|
 |従業員|じゅうぎょういん|工作人員、作業員|
+|重傷者|じゅうしょうしゃ|重傷者|
+|住宅|じゅうたく|住宅|
 |従来|じゅうらい|過去、以前、直到現在|
+|純粋|じゅんすい|純粹、單純|
+|常時|じょうじ|平時、時常|
 |情勢|じょうせい|形勢|
 |条例|じょうれい|條例|
 |人権|じんけん|人權|
@@ -368,13 +445,18 @@
 |迅速に|じんそくに|迅速地|
 |尽力|じんりょく|幫忙、協助、盡力、努力|
 |吸い殻|すいがら|菸蒂、菸灰|
+|推薦する|すいせんする|推薦|
 |すがすがしい||清爽、輕快、振奮、清新|
 |透ける|すける|透出、看見、透明|
 |巣立つ|すだつ|畢業|
+|速やかな|すみやかな|及時、迅速|
+|澄む|すむ|清澈、清新|
 |図々しい|ずうずうしい|厚顏無恥的、厚臉皮|
 |ずさんな||粗糙、不細緻的、杜撰、胡亂編造|
 |誠意|せいい|誠意|
+|成果|せいか|成果|
 |聖火リレー|せいかりれー|奧運聖火傳遞|
+|制限|せいげん|限制、限度、節制|
 |精巧|せいこう|精巧、精緻|
 |生産|せいさんライン|生產線|
 |正視|せいし|正視、正眼看|
@@ -383,23 +465,32 @@
 |整腸薬|せいちょうやく|腸胃藥、整腸藥|
 |静養|せいよう|靜養|
 |席上|せきじょう|座位上、會議上、宴會上|
+|責任者|せきにんしゃ|負責人|
+|惜別|せきべつ|惜別|
 |石油|せきゆ|石油|
 |積極的な|せっきょくてきな|積極的|
 |積極的な|せっきょくてきな|積極的|
 |接戦|せっせん|難分勝負的激烈鬥爭|
 |接待|せったい|接待、招待|
 |設置する|せっちする|設置|
+|迫る|せまる|迫使、強迫|
+|迫る|せまる|強迫、迫使|
+|戦火|せんか|戰火|
 |選挙|せんきょ|選舉|
 |繊細|せんさい|纖細、柔嫩、細緻|
 |船団|せんだん|船隊|
+|船長|せんちょう|船長|
 |選任|せんにん|選任、選拔任命|
 |扇風機|せんぶうき|風扇、電扇|
 |先方|せんぽう|對方|
 |洗練|せんれん|試煉、精煉、高尚講究|
 |税金|ぜいきん|稅金|
 |贅沢|ぜいたく|奢侈|
+|贅沢|ぜいたく|憤怒、氣憤、憤慨|
 |絶好|ぜっこう|絕佳、最好|
+|絶滅する|ぜつめつする|滅絕|
 |善意|ぜんい|善意|
+|前衛書道|ぜんえいしょどう|前衛書道|
 |粗悪な|そあくな|低劣、壞、差|
 |送金|そうきん|匯款、寄錢|
 |倉庫|そうこ|倉庫|
@@ -407,20 +498,30 @@
 |相続|そうぞく|繼承、繼任|
 |壮大な|そうだいな|宏大、雄壯|
 |総立ち|そうだち|全體一起站起來|
+|想定外|そうていがい|預料之外|
 |総理大臣|そうりだいじん|總理|
+|損ね|そこね|損傷|
 |組織する|そしきする|組織|
 |備える|そなえる|配備、備有|
 |その旨|そのむね|這樣的意思、這樣的事情（指前述的內容）|
 |そろえる||安排、整理、準備、收集、聚集、完成|
+|損失|そんしつ|損失|
+|存続|そんぞく|永存、長存、繼續存在|
 |増員|ぞういん|增加人員|
+|造詣が深い|ぞうけいがふかい|造詣深厚|
+|退官|たいかん|辭去官職、從官位高退|
 |大金|たいきん|巨款|
 |待遇|たいぐう|待遇、薪資報酬、接待、服務|
+|待遇|たいぐう|待遇、薪資報酬、接待、服務|
 |大した差|たいしたさ|很大的不同|
+|退出する|たいしゅつする|退出、退下|
 |体制|たいせい|機制、體制|
 |たいそう||很、非常|
 |大役|たいやく|艱難的任務、重大使命、重要角色|
 |たかが||只不過、僅僅|
 |炊く|たく|煮飯、燒飯|
+|巧みな|たくみな|靈巧的、精湛的、巧妙的|
+|他者|たしゃ|別人、其他人|
 |携える|たずさえる|攜帶、帶領、攜手、協同|
 |たたえる|たたえる|裝滿、充滿|
 |たたずむ||站一會兒、閒逛、停下來|
@@ -434,29 +535,38 @@
 |樽|たる|木桶、桶|
 |担架|たんか|擔架|
 |担保|たんぽ|擔保、抵押|
+|題字|だいじ|題字|
 |脱出する|だっしゅつする|出逃、逃脫、逃亡|
 |脱字|だつじ|漏字、掉字|
+|だまし取る|だましとる|騙取|
 |だらしない||懶散、不拘小節、自由散漫、不檢點|
 |誰彼なし|だれかれなし|任何人、不分你我、無論誰|
+|弾圧する|だんあつする|鎮壓、壓制|
 |団結|だんけつ|團結|
 |断定|だんてい|斷定、判定|
 |ダンプカー||自動卸貨卡車|
+|地位|ちい|地位|
 |近頃|ちかごろ|最近、現在|
 |力を注ぐ|ちからをそそぐ|傾注全力|
 |知人|ちじん|熟人、認識的人|
 |稚拙|ちせつ|幼稚且拙劣|
 |緻密|ちみつ|細緻、細膩、周密|
 |着服する|ちゃくふくする|貪汙、侵占、穿著|
+|中古|ちゅうこ|中古、二手|
 |聴衆|ちょうしゅう|聽眾|
 |直接|ちょくせつ|直接|
 |著作権|ちょさくけん|著作權|
+|著作権者|ちょさくけんしゃ|著作權所有人|
 |散らかす|ちらかす|亂扔、弄得亂七八糟|
+|追及|ついきゅう|追上、追趕、追究|
 |墜落する|ついらくする|墜落|
+|痛恨|つうこん|痛心、悔恨|
 |通訳|つうやく|口譯|
 |使い道|つかいみち|用途|
 |捕まる|つかまる|被捕、被逮住、抓住|
 |就き|つき|著手、起程|
 |就く|つく|到達（地位）、就任（職位）|
+|尽くす|つくす|奉獻、服務（一個人）、交朋友、耗盡|
 |作り話|つくりばなし|虛構的故事|
 |創る|つくる|創造|
 |継ぐ|つぐ|繼承|
@@ -472,6 +582,7 @@
 |定着|ていちゃく|安定、固定、附著、定居|
 |定着|ていちゃく|定居|
 |定評がある|ていひょうがある|有定論、有公論|
+|低迷する|ていめいする|低迷、萎靡不振、雲霧低垂|
 |手入れ|ていれ|維修、修整|
 |手口|てぐち|手法、方法、手段|
 |手頃|てごろ|合適|
@@ -480,27 +591,34 @@
 |テント||帳篷|
 |テント||帳篷|
 |転覆する|てんぷくする|顛覆、翻轉、推翻|
+|転落する|てんらくする|滾下、墮落、淪落、潦倒、落魄|
 |電源プラグ|でんげんぷらぐ|電源插頭|
+|問いかけ|といかけ|提問、詢問|
 |当～|とう|此～|
 |陶芸家|とうげいか|陶藝家|
 |とうてい||到底、無法～|
 |通る|とおる|走過、通過|
 |とかく||總是、動不動就|
+|特定する|とくていする|特定、鎖定查明|
 |匿名|とくめい|匿名|
 |突入する|とつにゅうする|衝進、闖入、毅然進入、投入|
 |整う|ととのう|端正、整齊|
 |整える|ととのえる|整理、整頓|
 |唱える|となえる|吟唱|
+|捉える|とらえる|抓住、捕捉|
+|トリアージ||檢傷分類、病患分流|
 |取り組む|とりくむ|努力於～、致力於～|
 |取り調べ|とりしらべ|調查、偵訊|
 |取調室|とりしらべしつ|偵訊室|
 |銅|どう|銅|
+|同意|どうい|同意、贊成、同義、意思相同|
 |堂々と|どうどうと|坦然地、堂堂地、光明正大地|
 |怒鳴る|どなる|大聲喊叫、怒駡|
 |泥|どろ|泥、泥巴|
 |内緒|ないしょ|祕密|
 |内部告発|ないぶこくはつ|內部檢舉|
 |半ば|なかば|中間、半途、一半|
+|長続き|ながつづき|持久的、持續的|
 |眺め|ながめ|景色、風景、景致|
 |長らく|ながらく|好久、長時間|
 |薙ぎ払う|なぎはらう|（用刀刃等）飛砍、橫砍|
@@ -508,6 +626,7 @@
 |嘆く|なげく|嘆氣、嘆息、悲傷、氣憤|
 |情けない|なさけない|可憐、可嘆|
 |情けない|なさけない|可悲、令人遺憾、悲慘|
+|成し遂げる|なしとげる|完成、實現|
 |なだれ込む|なだれこむ|蜂擁而上|
 |生意気|なまいき|傲慢、自大|
 |怠ける|なまける|懶惰、怠惰|
@@ -515,27 +634,37 @@
 |南極|なんきょく|南極|
 |難病|なんびょう|難治之症、疑難雜症|
 |～に値する|にあたいする|值得～、有～價值|
+|～に打ち込む|にうちこむ|專注於～、投進、射入、攻入|
 |～に訴える|にうったえる|訴訟、控告～|
 |匂いが漂う|においがただよう|瀰漫、味道飄散|
 |握り飯|にぎりめし|飯糰|
 |偽札|にせさつ|假幣、假錢|
 |～に立ち会う|にたちあう|到場、在場、在～的現場|
+|担う|になう|擔、挑、肩負、承擔|
 |～に励む|にはげむ|努力～、刻苦～|
+|～に励む|にはげむ|刻苦～、努力～|
 |入居|にゅうきょ|入住|
 |乳酸菌|にゅうさんきん|乳酸菌|
+|人間形成|にんげんけいせい|人格形成|
 |任務|にんむ|任務|
 |抜く|ぬく|拔起、除掉、省略、堅持到底|
 |盗む|ぬすむ|偷、偷偷地做|
+|盗む|ぬすむ|偷、偷偷地做|
+|音色|ねいろ|音色|
 |寝返りを打つ|ねがえりをうつ|睡著翻身|
+|熱意|ねつい|熱忱、熱情|
+|根強い|ねづよい|根深蒂固、堅韌不拔、頑強|
 |念願|ねんがん|心願、願望|
 |燃料|ねんりょう|燃料|
 |脳梗塞|のうこうそく|中風、腦梗塞|
 |農村|のうそん|農村|
 |納入|のうにゅう|繳納、上繳|
+|～の鍵|のかぎ|～的關鍵|
 |逃れる|のがれる|逃避（責任）|
 |逃れる|のがれる|逃跑、逃脫|
 |軒並み|のきなみ|緊接並排、家家戶戶、一律、全都|
 |のしかかる||壓在～上、重擔壓在心頭|
+|望む|のぞむ|眺望、希望、願望、仰望|
 |後|のち|～過後|
 |～の手前|のてまえ|～眼前、靠近自己這邊|
 |～の念|のねん|～的心情、～的想法|
@@ -547,6 +676,7 @@
 |図る|はかる|謀求|
 |はがき||明信片|
 |博物館|はくぶつかん|博物館|
+|育む|はぐくむ|培養、養育、維護、擁護、孵化|
 |励む|はげむ|奮勉、努力|
 |箱詰め|はこづめ|裝箱、裝盒|
 |端|はし|端、頭、邊緣|
@@ -555,13 +685,19 @@
 |破たん|はたん|失敗、破裂|
 |肌寒い|はだざむい|覺得有點冷|
 |発揮する|はっきする|發揮|
+|発行|はっこう|發行|
+|発達|はったつ|發達、發展、擴展|
 |発砲する|はっぽうする|（開）槍、（開）炮|
 |初詣|はつもうで|新年第一次參拜神社|
 |華々しい|はなばなしい|華麗、絢麗、輝煌|
 |離れ離れ|はなればなれ|分離、四散|
 |腹立たしい|はらだたしい||
+|半額|はんがく|半價|
 |繁殖|はんしょく|繁殖|
+|搬送|はんそう|搬運|
+|馬鹿力|ばかちから|強大的體力|
 |馬車|ばしゃ|馬車|
+|伐採|ばっさい|砍伐、採伐|
 |バレリーナ||芭蕾舞女演員|
 |バレる||敗露|
 |晩婚化|ばんこんか|晚婚化|
@@ -571,31 +707,48 @@
 |率いる|ひきいる|率領、帶領|
 |引き受ける|ひきうける|接受、承擔、保證、照料|
 |引き返す|ひきかえす|返回、折回|
+|引き立つ|ひきたつ|變得活躍|
 |ひきつける||著迷、吸引、吸引|
 |引きとめる|ひきとめる|阻止、挽回、叫回|
+|卑近な|ひきんな|淺顯|
+|非常識|ひじょうしき|沒有常識、不合乎常理|
+|非常時|ひじょうじ|非常時期|
+|非情な|ひじょうな|無情|
 |ひっくり返す|ひっくりかえす|翻倒、翻過來、顛倒|
 |必死|ひっし|拚命|
 |ヒットする||大受歡迎、熱銷|
 |羊|ひつじ|羊|
+|筆順|ひつじゅん|筆順|
 |人影|ひとかげ|人影、人形|
 |一苦労|ひとくろう|費一些力氣、操一些心|
 |人気|ひとけ|人氣|
 |人ごみ|ひとごみ|人群|
+|人手|ひとで|人手、幫手|
+|人目|ひとめ|別人的耳目|
 |人目も構わず|ひとめもかまわず|不在乎別人的目光|
 |避難所|ひなんじょ|避難所|
+|非難する|ひなんする|抱怨、責難、責備|
 |皮肉|ひにく|挖苦、奚落、諷刺、惡意地|
+|批判する|ひはんする|批判|
 |非凡な|ひぼんな|非凡的|
 |悲鳴|ひめい|悲鳴、慘叫|
 |飛躍的に|ひやくてきに|跳躍性地|
 |冷ややかな|ひややかな|冷淡的、冷漠的、冷靜的、冷的|
 |表彰する|ひょうしょうする|表彰|
+|評判|ひょうばん|評論、評價、出名、有名聲、傳聞、輿論|
 |ビジネスを立ち上げる|びじねすをたちあげる|創業、開始做生意|
 |美談|びだん|美談、令人欽佩的故事|
 |微動|びどう|微小動作、略微移動|
+|描写|びょうしゃ|描寫|
+|描写|びょうしゃ|描寫|
 |病状|びょうじょう|病情、症狀|
 |ビリ||最後、末尾、倒數第一|
 |貧乏|びんぼう|貧窮、困苦、貧苦|
+|不可解|ふかかい|不可理解的、令人費解的、不可思議的|
 |復元|ふくげん|復原、恢復原狀|
+|副作用|ふくさよう|副作用|
+|福祉|ふくし|福利|
+|福祉|ふくし|福利|
 |含む|ふくむ|含有、懷有|
 |相応しい|ふさわしい|適合、相稱|
 |節目|ふしめ|階段|
@@ -606,8 +759,10 @@
 |復帰|ふっき|恢復、復原、重回|
 |復帰する|ふっきする|回歸、歸來|
 |不適切ば|ふてきせつ|不恰當的、不適宜的|
+|筆|ふで|毛筆|
 |懐|ふところ|懷裡、胸懷|
 |舟|ふね|船、小舟|
+|不本意|ふほんい|非本意、不情願的|
 |踏み切る|ふみきる|大膽地開始、冒險、起飛|
 |不愉快|ふゆかい|不愉快|
 |不用意|ふようい|不謹慎、不小心|
@@ -619,21 +774,26 @@
 |部署|ぶしょ|部署、工作崗位|
 |物件|ぶっけん|（出租或銷售用的）房源、房子|
 |仏陀|ぶっだ|佛陀|
+|物的証拠|ぶってきしょうこ|證物|
 |仏像|ぶつぞう|佛像|
 |ぶつぶつ||抱怨、嘮叨、發牢騷|
 |分析|ぶんせき|研究、分析|
+|分野|ぶんや|領域、範疇|
 |塀|へい|圍牆、牆|
 |平均|へいきん|全國平均|
 |閉鎖|へいさ|封閉、關閉|
 |平然な|へいぜんな|沉著地、坦然不驚地|
 |ヘクタール||公頃|
 |ベテラン||專家、老手、老練的人|
+|ペンキ||油漆|
 |ホイッスル||口哨、哨子|
+|宝石|ほうせき|寶石|
 |包装紙|ほうそうし|包裝紙|
 |放っておく|ほうっておく|放一邊、暫且擱置|
 |方便|ほうべん|權宜之計|
 |方々で|ほうぼうで|到處、這裡那裡|
 |ほこり||塵土、灰塵|
+|誇る|ほこる|誇耀|
 |補助|ほじょ|補助|
 |補助|ほじょ|補助|
 |保全する|ほぜんする|保全|
@@ -641,6 +801,8 @@
 |炎|ほのお|火焰|
 |本学|ほんがく|這所大學、這所教育機構|
 |本場|ほんば|原產地、本地的、正宗的|
+|本番|ほんばん|正式、正式表演|
+|ホームドクター||家庭醫生|
 |ボウル||大碗、烹飪用的大器皿|
 |牧場|ぼくじょう|牧場|
 |没頭する|ぼっとうする|埋頭、專心致志|
@@ -651,20 +813,24 @@
 |マスコミ||大眾媒體|
 |待ちかねる|まちかねる|翹首盼望、伸長脖子、等不下去|
 |待ち構える|まちかまえる|等候、等待|
+|真っ先に|まっさきに|首先、最先|
 |まつわる||盤繞、跟隨|
 |満載|まんさい|滿載(貨物)、登滿(消息)|
 |見かねる|みかねる|看不下去、不忍旁觀|
+|見込み|みこみ|希望、可能性、預計、目標|
 |見込む|みこむ|預計、預料|
 |見事な|みごとな|難得的、精彩的、卓越的|
 |見頃|みごろ|正值觀賞時期、正好看的時候|
 |自ら|みずから|自己、親自|
 |見出し|みだし|標題、題目、索引|
 |見違える|みちがえる|看錯、煥然一新|
+|密集|みっしゅう|密集|
 |見通し|みとおし|預想、預測|
 |源|みなもと|發生、來源、源頭、起因、根源|
 |見逃せない|みのがせない|漏掉、錯過機會、放過、放跑、饒恕|
 |魅了する|みりょうする|使～入迷|
 |無口|むくち|沉默寡言、不愛說話|
+|虫歯|むしば|蛀牙|
 |むしゃむしゃと食べる|むしゃむしゃとたべる|狼吞虎嚥地吃、大口大口吃|
 |無実|むじつ|非事實、無根據|
 |矛盾|むじゅん|矛盾|
@@ -675,16 +841,21 @@
 |無謀な|むぼうな|無謀、胡亂的、魯莽的|
 |群がる|むらがる|聚集、聚|
 |群れ|むれ|群|
+|名水|めいすい|著名水源|
 |名誉|めいよ|名譽|
+|めぐり会う|めぐりあう|邂逅、相逢|
 |目立つ|めたつ|醒目、注目、顯眼|
+|メタンハイドレート||甲烷水合物|
 |目立つ|めだつ|醒目、注目、顯眼|
 |めちゃくちゃ||亂七八糟、雜亂無章、荒唐、胡鬧|
 |めっきり||顯著、急劇|
 |芽生える|めばえる|發芽|
 |面倒見|めんどうみ|照顧別人、關照他人|
+|儲かる|もうかる|賺錢、賺|
 |儲ける|もうける|賺錢、賺|
 |盲目|もうもく|盲目|
 |黙々と|もくもくと|默不出聲地|
+|持ち主|もちぬし|擁有者|
 |もったいない||可惜、過分、不敢當|
 |物心がつく|ものごころがつく|懂事、懂得人情世故、指過了幼兒期以後開始理解人情世故|
 |物足りない|ものたりない|不夠完美、有缺陷、不過癮|
@@ -696,8 +867,10 @@
 |奴|やつ|傢伙（輕蔑對方的說法。也用於親暱稱呼晚輩時）|
 |屋根|やね|房蓋、屋頂|
 |槍|やり|長槍、矛|
+|有罪|ゆうざい|有罪|
 |融資|ゆうし|融資|
 |有事|ゆうじ|緊急情況|
+|優先順位|ゆうせんじゅんい|優先順序|
 |猶予|ゆうよ|猶豫、延遲、延緩|
 |幽霊|ゆうれい|幽靈|
 |雪深い|ゆきぶかい|白雪皚皚、被厚厚的雪覆蓋|
@@ -709,22 +882,32 @@
 |容疑者|ようぎしゃ|嫌疑犯|
 |用件|ようけん|工作上的事情|
 |幼児|ようじ|幼兒、兒童|
+|幼児|ようじ|幼兒|
 |要する|ようする|需要、必要|
 |余暇|よか|餘暇、業餘時間|
 |余儀なくされる|よぎなくされる|被迫|
+|ヨット||遊艇、快艇|
+|余白|よはく|空白、留白|
 |予備校|よびこう|補習學校|
 |余命|よめい|殘年、餘生|
 |寄り添う|よりそう|貼近、挨近|
 |寄る|よる|靠近、接近|
 |世論|よろん|世論、輿論|
+|乱獲する|らかかくする|濫捕|
 |楽園|らくえん|樂園|
 |落書き|らくがき|塗鴉、亂塗亂畫|
 |ラッシュアワー||交通尖峰時刻|
+|乱獲する|らんかくする|濫捕|
 |乱闘騒ぎ|らんとうさわぎ|混亂騷動|
+|リスクを負う|りすくをおう|承擔風險|
+|リストラ||企業重組、裁員|
+|離島|りとう|孤島、獨立的島嶼|
 |リハビリ||復健、機能恢復訓練|
 |リハビリ||復健訓練、機能恢復訓練|
 |流出する|りゅうしゅつする|流出、外流|
 |漁師|りょうし|漁夫、漁民|
+|良質|りょうしつ|優度、優質|
+|良質|りょうしつ|質量良好、上等|
 |了承する|りょうしょうする|理解、同意、諒解|
 |良心|りょうしん|良心|
 |リース料|りーすりょう|租金|
@@ -736,8 +919,9 @@
 |連中|れんちゅう|同伴、同夥、成員們|
 |労働者|ろうどうしゃ|勞動者、勞工|
 |論旨|ろんし|論點、議論的主旨|
+|賄賂|わいろ|賄賂|
 |若気の至り|わかげのいたり|因為太年輕而犯下的失誤|
 |わずか||僅有、一點點|
 |渡り鳥|わたりどり|候鳥|
+|～を追われる|をおわれる|被放逐、被趕|
 |～ずくめ||整個都是～、全身～|
-|～に打ち込む|～にうちこむ|專注於～、投進、射入、攻入|
